// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header.styles ContainerLogo DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-items: center;
  align-items: center;
}

@media screen and ((max-width: 768px)) {
  .c0 {
    position: fixed;
    padding: 0px;
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Header.styles HeaderContainer DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  position: fixed;
  top: 0;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 116px;
  padding-top: 16px;
  padding-left: 64px;
  box-sizing: border-box;
  z-index: 10;
}

@media screen and ((max-width: 768px)) {
  .c0 {
    justify-content: center;
    padding: 0px;
  }
}

<div>
  <header
    class="c0"
  />
</div>
`;

exports[`Header.styles Item DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Header.styles Nav DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  padding-right: 32px;
  gap: 8px;
}

@media screen and ((max-width: 768px)) {
  .c0 {
    display: none;
  }
}

<div>
  <nav
    class="c0"
  />
</div>
`;

exports[`Header.styles Navegacao DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
}

<div>
  <a
    class="c0"
  />
</div>
`;
